# detectors-rs

./: .travis.yml  Cargo.toml  README.md  out_pixel  out_simple  out_standard  schema.json
.github/workflows/: rust.yml
config/: detector_types.json  detector_types.ron  detector_types_new.ron  detector_types_pixel.json  detector_types_pixels.ron  detector_types_simple.json  detectors.json  detectors.ron  detectors_e18039.ron  detectors_pixel.json  detectors_pixels.ron  detectors_simple.json  evolution.json  logo.json
src/: .nfs00000000a004b0350000006b  config.rs  coordinates.rs  detector.rs  error.rs  lib.rs  statistics.rs  surface.rs  unc.rs
src/unc/: val_unc_serde.rs
tests/: configurations.rs
tests/configurations/: empty_fields.json
tests/configurations/pass/: end_cap.json  end_cap_unc.json
utilities/: visualize.gpi
