[package]
name = "raumlehre"
version = "0.4.1"
authors = ["Justin Browne"]
edition = "2018"
description = "A package for calculating geometric properties of physics detectors."
repository = "https://github.com/j-browne/raumlehre"
readme = "README.md"
license = "GPL-3.0-or-later"
keywords = ["science", "physics", "detectors", "geometry"]
categories = ["science"]

[profile.dev]
opt-level = 1

[dependencies]
GSL = "*"
nalgebra = "*"
ndarray = "0.11.2"
optimize = "*"
pbr = "*"
rand = "*"
rand_distr = "*"
rayon = "*"
serde = "*"
structopt = "*"
serde_json = "*"
serde_derive = "*"
val_unc = { git = "https://github.com/j-browne/val_unc", features = ["serde"] }
