[package]
name = "raumlehre"
version = "0.6.0"
authors = ["Justin Browne"]
edition = "2018"
description = "A package for calculating geometric properties of physics detectors."
repository = "https://github.com/j-browne/raumlehre"
readme = "README.md"
license = "GPL-3.0-or-later"
keywords = ["science", "physics", "detectors", "geometry"]
categories = ["science"]

[features]
default = ["memoize"]
memoize = []

[profile.dev]
opt-level = 1

[dependencies]
GSL = "1.1.0"
nalgebra = "*"
ndarray = "0.11.2"
optimize = "*"
pbr = "*"
rand = "*"
rand_distr = "*"
rayon = "*"
serde = "*"
structopt = "*"
serde_json = "*"
serde_derive = "*"
val_unc = { version = "0.8.0", features = ["serde"] }
